WIP! add layouts for menu navigations, contents and so on; implement navigation menu, dynamic routing; TODO: solve problem with navmenu focusing and hidding nav menu (in details screen) and vice-versa

--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<network-security-config cleartextTrafficPermitted="true">
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">localhost</domain>
-    </domain-config>
-    <base-config>
+<network-security-config>
+    <base-config cleartextTrafficPermitted="true">
         <trust-anchors>
-            <!-- Trust user added CAs while debuggable only -->
             <certificates src="system" />
-            <certificates src="user" />
         </trust-anchors>
     </base-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="false">localhost</domain>
+    </domain-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="false">10.0.2.2</domain>
+    </domain-config>
+        <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="false">10.0.1.1</domain>
+    </domain-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">roh-upgrade.global.ssl.fastly.net</domain>
+    </domain-config>
+        <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">royal-opera-house.cdn.prismic.io</domain>
+    </domain-config>
 </network-security-config>
-<!--This will only work only if the android variant has android:debuggable=true -->
-<!-- This is safer than the usual conditional code because, as a security precaution, app stores do not accept apps which are marked debuggable. -->
-<!-- cleartextTrafficPermitted="true" -->
