--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,3 +1,3 @@
 <resources>
-    <color name="bootsplash_background">#0E1B31</color>
+    <color name="bootsplash_background">#050F20</color>
 </resources>
