--- a/android/app/src/main/res/layout/player_container.xml
+++ b/android/app/src/main/res/layout/player_container.xml
@@ -5,18 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <com.bitmovin.player.PlayerView
-        android:id="@+id/bitmovinPlayerView"
-        app:shutter_background_color="@android:color/transparent"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bootsplash_background">
-
-        <com.bitmovin.player.SubtitleView
-            android:id="@+id/bitmovinSubtitleView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:foregroundGravity="center" />
-
-    </com.bitmovin.player.PlayerView>
+        android:layout_weight="1">
+        <com.bitmovin.player.PlayerView
+            android:id="@+id/bitmovinPlayerView"
+            app:shutter_background_color="@android:color/transparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/bootsplash_background">
+        </com.bitmovin.player.PlayerView>
+    </RelativeLayout>
 </LinearLayout>
